--- a/2.1.ipynb
+++ b/2.1.ipynb
@@ -10,13 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     H   W   A\n",
+      "0  188  86  58\n",
+      "1  172  71  61\n",
+      "2  187  89  54\n",
+      "      H    W   A\n",
+      "42  156   82  54\n",
+      "43  185   85  47\n",
+      "44  199  110  38\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "import pandas as pd \n",
     "\n",
-    "a=pd.array ([heights = [188, 172, 187, 161, 183, 172, 185, 163, 173, 183, 174, 174, 175, \n",
+    "heights = [188, 172, 187, 161, 183, 172, 185, 163, 173, 183, 174, 174, 175, \n",
     "178, 183, 195, 178, 173, 174, 183, 174, 181, 162, 180, 170, 175, 182, 180, 183, \n",
     "178, 182, 188, 175, 179, 184, 193, 182, 183, 175, 185, 182, 183, 156, 185, 199] \n",
     " \n",
@@ -26,8 +42,152 @@
     " \n",
     "ages = [58, 61, 54, 54, 58, 57, 63, 54, 37, 51, 34, 26, 50, 48, 45, 52, 56, \n",
     "46, 54, 28, 52, 47, 55, 55, 54, 42, 51, 56, 55, 51, 54, 32, 21, 62, 43, 55, \n",
-    "56, 61, 53, 22, 64, 45, 54, 47, 38] ])\n",
-    "for elem in a.flat:"
+    "56, 61, 53, 22, 64, 45, 54, 47, 38] \n",
+    "data = {'H':heights, 'W' : weights, 'A': ages}\n",
+    "df=pd.DataFrame(data)\n",
+    "print(df.head(3))\n",
+    "print(df.tail(3))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задание 2.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H    156\n",
+      "W     64\n",
+      "A     21\n",
+      "dtype: int64\n",
+      "H    199\n",
+      "W    110\n",
+      "A     64\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd \n",
+    "\n",
+    "heights = [188, 172, 187, 161, 183, 172, 185, 163, 173, 183, 174, 174, 175, \n",
+    "178, 183, 195, 178, 173, 174, 183, 174, 181, 162, 180, 170, 175, 182, 180, 183, \n",
+    "178, 182, 188, 175, 179, 184, 193, 182, 183, 175, 185, 182, 183, 156, 185, 199] \n",
+    " \n",
+    "weights = [86, 71, 89, 64, 83, 71, 86, 68, 73, 84, 73, 72, 75, 78, 85, 93, 78, \n",
+    "70, 74, 80, 83, 82, 68, 80, 73, 78, 82, 81, 83, 79, 82, 86, 76, 77, 80, 103, \n",
+    "82, 83, 77, 89, 80, 85, 82, 85, 110] \n",
+    " \n",
+    "ages = [58, 61, 54, 54, 58, 57, 63, 54, 37, 51, 34, 26, 50, 48, 45, 52, 56, \n",
+    "46, 54, 28, 52, 47, 55, 55, 54, 42, 51, 56, 55, 51, 54, 32, 21, 62, 43, 55, \n",
+    "56, 61, 53, 22, 64, 45, 54, 47, 38] \n",
+    "data = {'H':heights, 'W' : weights, 'A': ages}\n",
+    "df=pd.DataFrame(data)\n",
+    "print(df.min(axis=0))\n",
+    "print(df.max(axis=0))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задание 2.2. 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                H           W          A\n",
+      "count   45.000000   45.000000  45.000000\n",
+      "mean   178.888889   80.422222  49.133333\n",
+      "std      8.501931    8.438249  10.674098\n",
+      "min    156.000000   64.000000  21.000000\n",
+      "25%    174.000000   75.000000  45.000000\n",
+      "50%    180.000000   80.000000  53.000000\n",
+      "75%    183.000000   84.000000  55.000000\n",
+      "max    199.000000  110.000000  64.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "heights = [188, 172, 187, 161, 183, 172, 185, 163, 173, 183, 174, 174, 175, \n",
+    "178, 183, 195, 178, 173, 174, 183, 174, 181, 162, 180, 170, 175, 182, 180, 183, \n",
+    "178, 182, 188, 175, 179, 184, 193, 182, 183, 175, 185, 182, 183, 156, 185, 199] \n",
+    " \n",
+    "weights = [86, 71, 89, 64, 83, 71, 86, 68, 73, 84, 73, 72, 75, 78, 85, 93, 78, \n",
+    "70, 74, 80, 83, 82, 68, 80, 73, 78, 82, 81, 83, 79, 82, 86, 76, 77, 80, 103, \n",
+    "82, 83, 77, 89, 80, 85, 82, 85, 110] \n",
+    " \n",
+    "ages = [58, 61, 54, 54, 58, 57, 63, 54, 37, 51, 34, 26, 50, 48, 45, 52, 56, \n",
+    "46, 54, 28, 52, 47, 55, 55, 54, 42, 51, 56, 55, 51, 54, 32, 21, 62, 43, 55, \n",
+    "56, 61, 53, 22, 64, 45, 54, 47, 38] \n",
+    "data = {'H':heights, 'W' : weights, 'A': ages}\n",
+    "df=pd.DataFrame(data)\n",
+    "stat=df.describe()\n",
+    "print (stat)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "задание 2.2. 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "180"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "heights = [188, 172, 187, 161, 183, 172, 185, 163, 173, 183, 174, 174, 175, \n",
+    "178, 183, 195, 178, 173, 174, 183, 174, 181, 162, 180, 170, 175, 182, 180, 183, \n",
+    "178, 182, 188, 175, 179, 184, 193, 182, 183, 175, 185, 182, 183, 156, 185, 199] \n",
+    " \n",
+    "weights = [86, 71, 89, 64, 83, 71, 86, 68, 73, 84, 73, 72, 75, 78, 85, 93, 78, \n",
+    "70, 74, 80, 83, 82, 68, 80, 73, 78, 82, 81, 83, 79, 82, 86, 76, 77, 80, 103, \n",
+    "82, 83, 77, 89, 80, 85, 82, 85, 110] \n",
+    " \n",
+    "ages = [58, 61, 54, 54, 58, 57, 63, 54, 37, 51, 34, 26, 50, 48, 45, 52, 56, \n",
+    "46, 54, 28, 52, 47, 55, 55, 54, 42, 51, 56, 55, 51, 54, 32, 21, 62, 43, 55, \n",
+    "56, 61, 53, 22, 64, 45, 54, 47, 38] \n",
+    "data = {'H':heights, 'W' : weights, 'A': ages}\n",
+    "df=pd.DataFrame(data)\n",
+    " "
    ]
   },
   {
